@@ -35,6 +35,7 @@ version <next>:
 - anoisesrc audio filter source
 - IVR demuxer
 - compensationdelay filter
+- acompressor filter
 
 
 version 2.8:
